--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,15 +33,23 @@
                         <a class="nav-link" href="/show/listeStagiaires">Stagiaires</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login">Connection</a>
+                        <a class="nav-link" href="/login">Connection</a>
                     </li>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/register">Ajouter quelqu'un</a>
+                        </li>
+                    {% endif %}
 
                 </ul>
             </div>
         </nav>
         
         {# Titres des différentes pages #}
-        <h1>{{ title }}</h1> 
+        {# {% if title %} #}
+                <h1>{{ title }}</h1> 
+        {# {% endif %} #}
+        
 
         {% block body %}
         {% endblock %}
