--- a/templates/show/infoStagiaireFormateur.html.twig
+++ b/templates/show/infoStagiaireFormateur.html.twig
@@ -14,7 +14,9 @@
 
     <p>Sexe : {{ personne.sexe }}<p>
     <p>Date de naissance : {{ personne.dateNaissance | date("d/m/Y") }}<p>
-    <p>Ville : {{ personne.ville }}<p>
+    {% if personne.ville %}
+        <p>Ville : {{ personne.ville }}<p>
+    {% endif %}
     <p>Courriel : {{ personne.email }}<p>
     <p>Téléphone : {{ personne.telephone }}<p>
 
