reglage bug infoStagiaire

--- a/templates/show/listeAllCategories.html.twig
+++ b/templates/show/listeAllCategories.html.twig
@@ -10,7 +10,7 @@
         <tbody>
         {% for categorie in categories %}
             <tr>
-                <td><strong>{{ categorie.nom }}<strong></td> 
+                <td style="text-align: center"><strong>{{ categorie.nom }}<strong></td> 
             </tr>
             {% for module in categorie.modules %}
             <tr>
