--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,14 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <script src="https://kit.fontawesome.com/6277cc7eb0.js"></script>
+
         <title>{% block title %}{{ title }}{% endblock %}</title>
         {% block stylesheets %}
 
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
             <link rel="stylesheet" href="{{ asset('assets/css/styles.css') }}">
+
 
         {% endblock %}
     </head>
