--- a/templates/show/listeModules.html.twig
+++ b/templates/show/listeModules.html.twig
@@ -3,9 +3,7 @@
 {% block body %}
     <table class="table table-striped">
         <thead>
-            {# <tr> #}
-                {# <th scope="col">Nom</th> #}
-                {# <th scope="col">Modules</th> #}
+
         </thead>
         <tbody>
         {% for categorie in categories %}
@@ -14,7 +12,9 @@
             </tr>
             {% for module in categorie.modules %}
             <tr>
-                <td>{{ module.nom }}</td> 
+                <td>{{ module.nom }}</td>
+                <td><a href="{{ path('editModule',{'id':module.id}) }}"><i class="fas fa-edit"></i></a></td>
+                <td><a href="{{ path('deleteModule',{'id':module.id}) }}"><i class="fas fa-trash-alt"></i></a></td>
                 {# {% for module in categorie.modules %} #}
                     {# <td>{{ module }} avec : formateur du module</td> #}
                 {# {% endfor %} #}
