--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,8 @@
         <title>{% block title %}{{ title }}{% endblock %}</title>
         {% block stylesheets %}
 
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+            {# <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> #}
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
             <link rel="stylesheet" href="{{ asset('assets/css/styles.css') }}">
 
 
@@ -18,7 +19,7 @@
         {# On affiche le site uniquement si on est connecté #}
         {% if is_granted('ROLE_USER') or login is defined %}
             
-            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <nav class="navbar navbar-expand-lg navbar-light bg-warning">
                 {# <a class="navbar-brand" href="#">Navbar</a> #}
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -39,7 +40,7 @@
                             <a class="nav-link" href="/show/listeStagiaires">Stagiaires</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/login">Connection</a>
+                            <a class="nav-link" href="/login">Connexion</a>
                         </li>
                         {% if is_granted('ROLE_ADMIN') %}
                             <li class="nav-item">
@@ -62,7 +63,7 @@
         {% else %}
 
             <h1>Veuillez vous connecter<h1>
-            <p><a href="/login"><button type="button" class="btn btn-primary btn-lg">Connection</button></a></p>
+            <p><a href="/login"><button type="button" class="btn btn-warning btn-lg">Connexion</button></a></p>
 
         {% endif %}
     </body>
