--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,13 +9,13 @@
         {% endif %}
 
         {% if app.user %}
-            <div class="checkbox mb-3">You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+            <div class="checkbox mb-3">Vous êtes connecté en tant que  {{ app.user.username }}, <a href="{{ path('app_logout') }}">déconnexion</a>
         {% endif %}
 
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="inputUsername" class="sr-only">Username</label>
+        <h1 class="h3 mb-3 font-weight-normal">Veuillez vous connecter</h1>
+        <label for="inputUsername" class="sr-only">Pseudonyme</label>
         <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
+        <label for="inputPassword" class="sr-only">Mot de passe</label>
         <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
 
         <input type="hidden" name="_csrf_token"
@@ -33,8 +33,8 @@
             </div>
         #}
 
-        <button class="btn btn-lg btn-primary" type="submit">
-            Sign in
+        <button class="btn btn-warning btn-lg" type="submit">
+            Connexion
         </button>
     </form>
 {% endblock %}
