--- a/templates/show/listeModules.html.twig
+++ b/templates/show/listeModules.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <table class="table table-striped">
+    <table class="table table-striped table-warning">
         <thead>
 
         </thead>
@@ -24,8 +24,8 @@
         </tbody>
     </table>
 
-    <p><a href="../add/categorie"  ><button type="button" class="btn btn-primary btn-lg">Ajouter une catégorie</button></a></p>
-    <p><a href="../add/module"  ><button type="button" class="btn btn-primary btn-lg">Ajouter un module</button></a></p>
+    <p><a href="../add/categorie"  ><button type="button" class="btn btn-warning btn-lg">Ajouter une catégorie</button></a></p>
+    <p><a href="../add/module"  ><button type="button" class="btn btn-warning btn-lg">Ajouter un module</button></a></p>
 
 
 {% endblock %}
