--- a/templates/show/listePersonnes.html.twig
+++ b/templates/show/listePersonnes.html.twig
@@ -12,7 +12,7 @@
     
     {% endif %}
 
-    <table class="table table-striped">
+    <table class="table table-striped table-warning">
         <thead>
             <tr>
                 <th scope="col">Prénom</th>
@@ -59,11 +59,11 @@
 
     {% if stagiaires is defined %}
 
-        <p><a href="../add/stagiaire"  ><button type="button" class="btn btn-primary btn-lg">Ajouter un stagiaire</button></a></p>
+        <p><a href="../add/stagiaire"  ><button type="button" class="btn btn-warning btn-lg">Ajouter un stagiaire</button></a></p>
 
     {% else %}
 
-        <p><a href="../add/formateur"  ><button type="button" class="btn btn-primary btn-lg">Ajouter un formateur</button></a></p>
+        <p><a href="../add/formateur"  ><button type="button" class="btn btn-warning btn-lg">Ajouter un formateur</button></a></p>
 
     {% endif %}
 
