--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,6 @@
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
             <link rel="stylesheet" href="{{ asset('assets/css/styles.css') }}">
 
-
         {% endblock %}
     </head>
     
@@ -57,7 +56,12 @@
 
             {% block body %}
             {% endblock %}
-            {% block javascripts %}{% endblock %}
+            <!-- <script src="jquery-3.4.1.min.js"></script> -->
+            {% block javascripts %}
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
+            {% endblock %}
 
         {# Connection #}
         {% else %}
