--- a/templates/add_edit/addFormation.html.twig
+++ b/templates/add_edit/addFormation.html.twig
@@ -3,23 +3,24 @@
 {% block body %}
    {{ form_start(form) }}
 
-   <input type='hidden' id="maxNb" value ='15' >
 
-        {{form_row(form.nom) }} 
-        {{form_row(form.nbPlaces) }}
-        {{form_row(form.dateDebut) }}
-        {{form_row(form.dateFin) }}
+    {{form_row(form.nom) }} 
+    {{form_row(form.nbPlaces) }}
+    {{form_row(form.dateDebut) }}
+    {{form_row(form.dateFin) }}
 
+    {# <input type='hidden' id="maxNb" value = {{  }}> #}
 
-     <ul id="collections" data-prototype= "{{ form_row(form.stagiaires.vars.prototype)|e('html_attr') }}">
-            <!-- <input type='hidden' id="maxNb" value ='15' > -->
+    <ul id="collections" data-prototype= "{{ form_row(form.stagiaires.vars.prototype)|e('html_attr') }}">
 
         {% for stagiaire in form.stagiaires %}
             <li>
-
-                {{ form_row(stagiaire) }}</li>
+                {{ form_row(stagiaire) }}
+            </li>
         {% endfor %}
+
     </ul>
+
       {{form_row(form.submit) }} 
 {{ form_end(form) }}
 
