--- a/templates/add_edit/addEditStagiaire.html.twig
+++ b/templates/add_edit/addEditStagiaire.html.twig
@@ -14,7 +14,7 @@
 
     <input type='hidden' id="maxNb" value = '15'>
 
-    <ul id="collections" data-prototype= "{{ form_row(form.formations.vars.prototype)|e('html_attr') }}">
+    <ul class="collections" data-prototype= "{{ form_row(form.formations.vars.prototype)|e('html_attr') }}">
 
         {% for formation in form.formations %}
             <li>
