--- a/templates/show/listePersonnes.html.twig
+++ b/templates/show/listePersonnes.html.twig
@@ -32,20 +32,29 @@
             {% for personne in personnes %}
             
             <tr>
-                <td>{{ personne.prenom }}</td>
-                <td>{{ personne.nom }}</td>
-                <td>{{ personne.sexe }}</td>
-                <td>{{ personne.dateNaissance | date("d/m/Y") }}</td>
-                <td>{{ personne.ville }}</td>
-                <td>{{ personne.email }}</td>
-                <td>{{ personne.telephone }}</td>
+                
                 {% if stagiaires is defined %}
 
+
+                    <td><a href="{{ path('showInfoStagiaire',{'id':personne.id}) }}" >{{ personne.prenom }}</a></td>
+                    <td><a href="{{ path('showInfoStagiaire',{'id':personne.id}) }}" >{{ personne.nom }}</a></td>
+                    <td>{{ personne.sexe }}</td>
+                    <td>{{ personne.dateNaissance | date("d/m/Y") }}</td>
+                    <td>{{ personne.ville }}</td>
+                    <td>{{ personne.email }}</td>
+                    <td>{{ personne.telephone }}</td>
                     <td><a href="{{ path('editStagiaire',{'id':personne.id}) }}"><i class="fas fa-edit"></i></a></td>
                     <td><a href="{{ path('deleteStagiaire',{'id':personne.id}) }}"><i class="fas fa-trash-alt"></i></a></td>
 
                 {% else %}
 
+                    <td><a href="{{ path('showInfoFormateur',{'id':personne.id}) }}" >{{ personne.prenom }}</a></td>
+                    <td><a href="{{ path('showInfoFormateur',{'id':personne.id}) }}" >{{ personne.nom }}</a></td>
+                    <td>{{ personne.sexe }}</td>
+                    <td>{{ personne.dateNaissance | date("d/m/Y") }}</td>
+                    <td>{{ personne.ville }}</td>
+                    <td>{{ personne.email }}</td>
+                    <td>{{ personne.telephone }}</td>
                     <td><a href="{{ path('editFormateur',{'id':personne.id}) }}"><i class="fas fa-edit"></i></a></td>
                     <td><a href="{{ path('deleteFormateur',{'id':personne.id}) }}"><i class="fas fa-trash-alt"></i></a></td>
 
