--- a/templates/add_edit/addEditFormation.html.twig
+++ b/templates/add_edit/addEditFormation.html.twig
@@ -11,15 +11,18 @@
 
     {# <input type='hidden' id="maxNb" value = {{  }}> #}
 
-    <ul class="collections" data-prototype= "{{ form_row(form.modules.vars.prototype)|e('html_attr') }}">
+    {# <ul class="collections" data-prototype= "{{ form_row(form.modules.vars.prototype)|e('html_attr') }}">
 
         {% for module in form.modules %}
             <li>
                 {{ form_row(module) }}
             </li>
+            <li>
+                Durée (en jours) : 
+            </li>
         {% endfor %}
 
-    </ul>
+    </ul> #}
 
     {% if editMode %}
         <ul class="collections" data-prototype= "{{ form_row(form.stagiaires.vars.prototype)|e('html_attr') }}">
