--- a/templates/show/diplome.html.twig
+++ b/templates/show/diplome.html.twig
@@ -7,9 +7,9 @@
         <title>{% block title %}{{  "Diplôme"  }}{% endblock %}</title>
         {% block stylesheets %}
 
-            {# <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> #}
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> #}
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-            <link rel="stylesheet" href="{{ asset('assets/css/styles.css') }}">
+            <link rel="stylesheet" href="{{ asset('assets/css/styles.css') }}"> 
 
         {% endblock %}
     </head>
@@ -17,13 +17,15 @@
     <body>
 {% block body %}
 
-<h1>Diplôme</h1>
-<h2>{{ formation.nom }}</h2>
+<h1 style="text-align: center;">Diplôme</h1>
+<h3 style='color:red' id="formationdiplome">{{ formation.nom }}</h3>
 <div class="decernediplome">
 <p>Décerné à  {{  stagiaire.prenom ~ " " ~ stagiaire.nom  }}  </p>
-<p>Fait à Strasbourg, le {{  "now"|date("m/d/Y")  }} </p>
+<p>Fait à Strasbourg, le {{  "now"|date("d/m/Y")  }} </p>
 </div>
-
+<div class="boutonpdf">
+{# <a href=" {{  path("pdfController")  }}  " ><button type="button" class="btn btn-warning" >Générer un pdf</button></a> #}
+</div>
 {% endblock %}
     </body>
 
