--- a/templates/show/infoStagiaireFormateur.html.twig
+++ b/templates/show/infoStagiaireFormateur.html.twig
@@ -24,7 +24,7 @@
 
     {% for formation in stagiaire.formations %}
 
-    <p>Diplôme « {{ stagiaire.formation.nom  }} » <a href=" {{  path("showDiplome", { "id": personne.id } )  }}  " >Donner le diplôme</a></p>
+    <p>Diplôme « {{ formation }} » <a href=" {{ path("createPdf", { "id": personne.id, "id_formation" : formation.id } ) }}  " ><button type="button" class="btn btn-warning" >Générer un pdf</button></a></p>
 
     {% endfor %}
 
