--- a/templates/show/listeStagiairesSession.html.twig
+++ b/templates/show/listeStagiairesSession.html.twig
@@ -20,15 +20,15 @@
         <tbody>
             {% for stagiaire in formation.stagiaires %}
             <tr>
-                <a href="{{ path('showInfoFormateur',{'id':personne.id}) }}" ><td scope="col">{{ stagiaire.prenom }}</td></a>
+                <a href="{{ path('showInfoStagiaire',{'id':stagiaire.id}) }}" ><td scope="col">{{ stagiaire.prenom }}</td></a>
                 <td scope="col">{{ stagiaire.nom }}</td>
                 <td scope="col">{{ stagiaire.sexe }}</td>
-                <td scope="col">{{ stagiaire.dateNaissance }}</td>
+                <td scope="col">{{ stagiaire.dateNaissance | date("d/m/Y") }}</td>
                 <td scope="col">{{ stagiaire.ville }}</td>
                 <td scope="col">{{ stagiaire.email }}</td>
                 <td scope="col">{{ stagiaire.telephone }}</td>
-                <td><a href="{{ path('editStagiaire',{'id':personne.id}) }}"><i class="fas fa-edit"></i></a></td>
-                <td><a href="{{ path('deleteStagiaire',{'id':personne.id}) }}"><i class="fas fa-trash-alt"></i></a></td>
+                <td><a href="{{ path('editStagiaire',{'id':stagiaire.id}) }}"><i class="fas fa-edit"></i></a></td>
+                <td><a href="{{ path('deleteStagiaire',{'id':stagiaire.id}) }}"><i class="fas fa-trash-alt"></i></a></td>
             </tr>
             {% endfor %}
 
