--- a/templates/show/infoSession.html.twig
+++ b/templates/show/infoSession.html.twig
@@ -2,12 +2,33 @@
 
 {% block body %}
 
-        {% if formation.modules %}
-                {% for module in formation.modules %}
+	<table class="table table-striped table-warning">
+		<thead>
+			<tr>
+				<th scope="col">Catégorie et modules</th>
+				<th scope="col">Formateurs</th>
+			</tr>
+		</thead>
 
-                        <p>{{ module.nom }} : durée du module, nom des formateurs</p>
-
-                {% endfor %}
-        {% endif %}
+		<tbody>
+			{% if formation.modules %}
+				{% for module in formation.modules %}
+					{% if categorieM is not defined or categorieM != module.categorie %}	
+						<tr>
+							<td style="text-align: center"><strong>{{ module.categorie }}<strong></td> 
+							{% for formateur in module.categorie.formateurs %}
+								<td >{{ formateur }}</td> 
+							{% endfor %}
+						</tr>		
+					{% endif %}				
+						<tr>
+							<td>{{ module }}</td>
+							<td></td>
+						</tr>
+					{% set categorieM = module.categorie %}
+				{% endfor %}
+			{% endif %}
+		</tbody>
+	</table>
 
 {% endblock %}
