--- a/templates/show/listeModules.html.twig
+++ b/templates/show/listeModules.html.twig
@@ -8,16 +8,13 @@
         <tbody>
         {% for categorie in categories %}
             <tr>
-                <td style="text-align: center"><strong>{{ categorie.nom }}<strong></td> 
+                <td style="text-align: center"><strong>{{ categorie }}<strong></td> 
             </tr>
             {% for module in categorie.modules %}
             <tr>
                 <td>{{ module.nom }}</td>
                 <td><a href="{{ path('editModule',{'id':module.id}) }}"><i class="fas fa-edit"></i></a></td>
                 <td><a href="{{ path('deleteModule',{'id':module.id}) }}"><i class="fas fa-trash-alt"></i></a></td>
-                {# {% for module in categorie.modules %} #}
-                    {# <td>{{ module }} avec : formateur du module</td> #}
-                {# {% endfor %} #}
             </tr>
             {% endfor %}
         {% endfor %}
