--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,6 +39,9 @@
                             <a class="nav-link" href="/show/listeStagiaires">Stagiaires</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="/booking/calendar">Planigramme</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="/login">Connexion</a>
                         </li>
                         {% if is_granted('ROLE_ADMIN') %}
