--- a/templates/show/listeModules.html.twig
+++ b/templates/show/listeModules.html.twig
@@ -3,16 +3,26 @@
 {% block body %}
     <table class="table table-striped table-warning">
         <thead>
-
+            <tr>
+                <th scope="col">Catégorie et modules</th>
+                <th scope="col">Détails</th>
+                <th scope="col">Modifier</th>
+                <th scope="col">Supprimer</th>
+            </tr>
         </thead>
+
         <tbody>
         {% for categorie in categories %}
             <tr>
                 <td style="text-align: center"><strong>{{ categorie }}<strong></td> 
+                <td><a href="{{ path('showInfoCategorie',{'id':categorie.id}) }}"><i class="fas fa-list-alt"></i></a></td>
+                <td><a href="{{ path('editCategorie',{'id':categorie.id}) }}"><i class="fas fa-edit"></i></a></td>
+                <td><a href="{{ path('deleteCategorie',{'id':categorie.id}) }}"><i class="fas fa-trash-alt"></i></a></td>
             </tr>
             {% for module in categorie.modules %}
             <tr>
                 <td>{{ module.nom }}</td>
+                <td></td>
                 <td><a href="{{ path('editModule',{'id':module.id}) }}"><i class="fas fa-edit"></i></a></td>
                 <td><a href="{{ path('deleteModule',{'id':module.id}) }}"><i class="fas fa-trash-alt"></i></a></td>
             </tr>
