--- a/templates/show/listePersonnes.html.twig
+++ b/templates/show/listePersonnes.html.twig
@@ -22,8 +22,9 @@
                 <th scope="col">Ville</th>
                 <th scope="col">Courriel</th>
                 <th scope="col">Téléphone</th>
-                <th scope="col"></th>
-                <th scope="col"></th>
+                <th scope="col">Détails</th>
+                <th scope="col">Modifier</th>
+                <th scope="col">Supprimer</th>
     
             </tr>
         </thead>
@@ -43,6 +44,7 @@
                     <td>{{ personne.ville }}</td>
                     <td>{{ personne.email }}</td>
                     <td>{{ personne.telephone }}</td>
+                    <td><a href="{{ path('showInfoStagiaire',{'id':personne.id}) }}"><i class="fas fa-list-alt"></i></a></td>
                     <td><a href="{{ path('editStagiaire',{'id':personne.id}) }}"><i class="fas fa-edit"></i></a></td>
                     <td><a href="{{ path('deleteStagiaire',{'id':personne.id}) }}"><i class="fas fa-trash-alt"></i></a></td>
 
@@ -50,13 +52,14 @@
 
                 {% else %}
 
-                    <td><a href="{{ path('showInfoFormateur',{'id':personne.id}) }}" >{{ personne.prenom }}</a></td>
-                    <td><a href="{{ path('showInfoFormateur',{'id':personne.id}) }}" >{{ personne.nom }}</a></td>
+                    <td>{{ personne.prenom }}</a></td>
+                    <td>{{ personne.nom }}</a></td>
                     <td>{{ personne.sexe }}</td>
                     <td>{{ personne.dateNaissance | date("d/m/Y") }}</td>
                     <td>{{ personne.ville }}</td>
                     <td>{{ personne.email }}</td>
                     <td>{{ personne.telephone }}</td>
+                    <td><a href="{{ path('showInfoFormateur',{'id':personne.id}) }}"><i class="fas fa-list-alt"></i></a></td>
                     <td><a href="{{ path('editFormateur',{'id':personne.id}) }}"><i class="fas fa-edit"></i></a></td>
                     <td><a href="{{ path('deleteFormateur',{'id':personne.id}) }}"><i class="fas fa-trash-alt"></i></a></td>
 
